# rust-packaging-example

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  cross_build.sh  package.sh  rust_packaging_example.spec
.github/workflows/: test-action.yaml
.rpm/: rust-packaging-example.spec  rust_packaging_example.spec
builder/: Dockerfile.x86_64-unknown-linux-musl  README.md  build_image.sh
builder/shared/: install_dependencies_debian.sh
distribution/: packaging_functions.sh
distribution/debian/scripts/: postinst
distribution/docker/: entrypoint.sh
distribution/etc/rust-pacakging-example/config/examples/: example2.yaml
distribution/etc/rust-packaging-example/: logger.yaml
distribution/etc/systemd/system/: rust-packaging-example.service
packaging/: README.md  cross_build.sh  functions.sh  package.sh  run.sh
packaging/builder-images/: Dockerfile.x86_64-alpine-linux-musl  Dockerfile.x86_64-unknown-linux-gnu  README.md  build_image.sh
packaging/builder-images/shared/: install_dependencies_debian.sh
packaging/distribution/debian/maintainer-scripts/: postinst
packaging/distribution/usr/lib/systemd/system/: rust-packaging-example.service
src/: main.rs
