[package]
name = "rust-packaging-example"
version = "0.1.0"
description = "Example rust program for packaging demo purposes"
authors = ["Anup Dhamala <anupdhml+git@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/anupdhml/rust-packaging-example"
documentation = "https://github.com/anupdhml/rust-packaging-example"
repository = "https://github.com/anupdhml/rust-packaging-example"

[dependencies]

# un-comment for local testing
#snmalloc-rs = { path = "snmalloc-rs", optional = true }
#snmalloc-rs = { git = "https://github.com/SchrodingerZhu/snmalloc-rs.git" , optional = true }
snmalloc-rs = { version = "0.2", optional = true }

mimalloc = { version = "0.1", default-features = false, optional = true }

jemallocator = { version = "0.3", optional = true }

[patch.crates-io]
# https://github.com/SchrodingerZhu/snmalloc-rs/compare/master...anupdhml:custom_lib_path
# TODO ensure that we don't have to use snmalloc-rs from a personal fork
snmalloc-rs = { git = "https://github.com/anupdhml/snmalloc-rs", branch = "custom_lib_path" }

[features]
default = ["allocator-snmalloc"]
#default = ["allocator-mimalloc"]
#default = ["allocator-jemalloc"]
allocator-snmalloc = ["snmalloc-rs"]
allocator-mimalloc = ["mimalloc"]
allocator-jemalloc = ["jemallocator"]

# for use during debian packaging, via cargo-deb
# https://github.com/mmstick/cargo-deb#packagemetadatadeb-options
[package.metadata.deb]
name = "rust-packaging-example"
# list of other sections at https://packages.debian.org/stable/
section = "rust"
depends = "$auto"
maintainer-scripts = "packaging/distribution/debian/maintainer-scripts/"
assets = [
  # target path will be automatically corrected when cross-compiling
  ["target/release/rust-packaging-example", "/usr/bin/", "755"],
  ["README.md", "/usr/share/doc/rust-packaging-example/", "644"],
  ["LICENSE", "/usr/share/doc/rust-packaging-example/", "644"],
  # need to specify each directory contents since only actual file entries are allowed here
  ["packaging/distribution/etc/rust-packaging-example/*", "/etc/rust-packaging-example/", "644"],
  ["packaging/distribution/etc/rust-packaging-example/config/*", "/etc/rust-packaging-example/config/", "644"],
  ["packaging/distribution/etc/rust-packaging-example/config/examples/*", "/etc/rust-packaging-example/config/examples/", "644"],
  # copying systemd service to standard location for debian packages
  ["packaging/distribution/etc/systemd/system/*", "/lib/systemd/system", "644"],
]
conf-files = [
  # these files won't be overwritten when the package is upgraded
  "/etc/rust-packaging-example/logger.yaml",
]
# TODO generate this automatically as part of deb packaging (from README intro)
# and place in "extended-description-file"
extended-description = """\
Example project demonstrating how to package a rust application for final distribution.
"""

# for use during rpm packaging, via cargo-rpm
# https://github.com/iqlusioninc/cargo-rpm
[package.metadata.rpm]
package = "rust-packaging-example"
[package.metadata.rpm.cargo]
# useful when using cargo rpm itself to build the project (i.e. without the
# --no-cargo-build flag from `cargo rpm build`)
buildflags = ["--release"]
profile = "release"
[package.metadata.rpm.targets]
rust-packaging-example = { path = "/usr/bin/rust-packaging-example" }
# The LHS paths here are relative to the rpm config dir (.rpm at project root).
# If you add new files here, please make sure to add them to %files section in
# the rpm spec file (inside .rpm) -- otherwise the rpm packaging will fail.
[package.metadata.rpm.files]
"../README.md" = { path = "/usr/share/doc/rust-packaging-example/README.md" }
"../LICENSE" = { path = "/usr/share/licenses/rust-packaging-example/LICENSE" }
"../packaging/distribution/etc/rust-packaging-example/" = { path = "/etc/rust-packaging-example/" }
# copying systemd service to standard location for rpm packages
"../packaging/distribution/etc/systemd/system/rust-packaging-example.service" = { path = "/usr/lib/systemd/system/rust-packaging-example.service" }
